--- a/apps/www/src/styles/globals.css
+++ b/apps/www/src/styles/globals.css
@@ -5,3 +5,23 @@
 ::-webkit-scrollbar {
   width: 0rem;
 }
+
+.dotted-bg {
+  --dot-bg: #161616;
+  --dot-color: #848282;
+  --dot-size: 1px;
+  --dot-space: 50px;
+  background:
+    linear-gradient(
+        90deg,
+        var(--dot-bg) calc(var(--dot-space) - var(--dot-size)),
+        transparent 1%
+      )
+      center / var(--dot-space) var(--dot-space),
+    linear-gradient(
+        var(--dot-bg) calc(var(--dot-space) - var(--dot-size)),
+        transparent 1%
+      )
+      center / var(--dot-space) var(--dot-space),
+    var(--dot-color);
+}
