--- a/apps/www/src/styles/globals.css
+++ b/apps/www/src/styles/globals.css
@@ -25,3 +25,35 @@
       center / var(--dot-space) var(--dot-space),
     var(--dot-color);
 }
+
+pre {
+  overflow-x: auto;
+  padding: 1rem 0;
+  margin: 1rem 0;
+}
+
+pre [data-line] {
+  padding: 0 1rem;
+}
+
+code {
+  counter-reset: line;
+}
+
+code > [data-line]::before {
+  counter-increment: line;
+  content: counter(line);
+  display: inline-block;
+  width: 1rem;
+  margin-right: 2rem;
+  text-align: right;
+  color: gray;
+}
+
+code[data-line-numbers-max-digits="2"] > [data-line]::before {
+  width: 2rem;
+}
+
+code[data-line-numbers-max-digits="3"] > [data-line]::before {
+  width: 3rem;
+}
